--- a/client/main-dark.html
+++ b/client/main-dark.html
@@ -48,7 +48,7 @@
         <!-- 이캅스 글자 -->
         <a
           class="nav-top__title navbar-brand align-middle text-reset press-font"
-          href="main-dark.html"
+          href="/main-dark"
         >
           <h1 class="ms-2 fs-5 py-2">E-COPS</h1>
         </a>
