--- a/client/recruit-dark.html
+++ b/client/recruit-dark.html
@@ -48,7 +48,7 @@
         <!-- 이캅스 글자 -->
         <a
           class="nav-top__title navbar-brand align-middle text-reset"
-          href="main-dark.html"
+          href="/main-dark"
         >
           <img class="ms-2" src="images/로고흰색.png" />
         </a>
