--- a/client/main-dark.html
+++ b/client/main-dark.html
@@ -288,9 +288,9 @@
     <!-- ======== Contact 버튼 ======== -->
     <div class="contact-btn contact-btn-dark">
       <span class="contact-btn__text-before">Contact</span>
-      <span class="contact-btn__text-after text-end"
-        >mjk4534@ewhain.net <br />
-        010-7186-4534
+      <span class="contact-btn__text-after text-end">
+        고민지 / 010-7186-4534 <br>
+        mjk4534@ewhain.net
       </span>
       <i class="fas fa-comment contact-btn__icon text-light fs-3"></i>
     </div>
