--- a/client/activity-dark.html
+++ b/client/activity-dark.html
@@ -4,26 +4,32 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- 탭 제목, 구글 검색 노출 제목 -->
     <title>E-COPS</title>
+    <!-- 구글 검색 노출 설명 -->
+    <meta name="description" content="이화여자대학교 정보보안동아리 E-COPS" />
+    <!-- 탭 아이콘 -->
+    <link
+      rel="shortcut icon"
+      sizes="16x16 32x32 64x64"
+      href="images/로고그린.png"
+    />
+
+    <!-- 카톡 공유 설정 -->
+    <meta property="og:title" content="이화여자대학교 정보보안동아리 E-COPS" />
+    <!-- 이미지 절대 경로로 작성 -->
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image" content="#" />
+    <!-- url 추가하기 -->
+    <meta property="og:url" content="#" />
+
+    <!-- --기타-- -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
-      integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
-      integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
     <link
       rel="stylesheet"
@@ -36,10 +42,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"
     />
-
     <link rel="stylesheet" href="css/style.css" />
   </head>
-
   <body id="activity-dark-page" class="dark-page">
     <!-- ======== 상단 nav bar ======== -->
     <nav class="nav-top navbar navbar-expand-lg bg-black sticky-top py-3 px-2">
@@ -140,7 +144,10 @@
           </a>
         </li>
         <li class="nav-item mx-2">
-          <a class="nav-link text-light" href="#메일">
+          <a
+            class="nav-link text-light"
+            href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=ewha.ecops@gmail.com"
+          >
             <i class="fas fa-paper-plane fs-4"></i>
           </a>
         </li>
