--- a/client/main.html
+++ b/client/main.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="kr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="이화여자대학교 정보보안동아리 E-COPS"/>
+    <!-- 탭 제목, 구글 검색 노출 제목 -->
     <title>E-COPS</title>
+    <!-- 구글 검색 노출 설명 -->
+    <meta name="description" content="이화여자대학교 정보보안동아리 E-COPS"/>
+    <!-- 탭 아이콘 -->
+    <link rel="shortcut icon" sizes="16x16 32x32 64x64" href="images/로고그린.png"/>
+
+    <!-- 카톡 공유 설정 -->
+    <meta property="og:title" content="이화여자대학교 정보보안동아리 E-COPS">
+    <!-- 이미지 절대 경로로 작성 -->
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image" content="#">
+    <!-- url 추가하기 -->
+    <meta property="og:url" content="#">
+    
+
+    <!-- --기타-- -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
-      integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
-      integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
     <link
       rel="stylesheet"
@@ -37,8 +39,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"
     />
-
-   <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
   </head>
 
   <!-- main 페이지 -->
@@ -111,12 +112,12 @@
           <!-- 이미지 색감 조정! -->
           <img class="main-circle" src="images/light-circle-text.png">
           <!-- 텍스트 -->
-          <p class="main-text fs-5 line-height-2 text-center">
+          <p class="main-text text-center">
             <!-- 모바일 줄바뀜 해결하기! -->
-            E-COPS(EWHA-CONTROL OF PROGRAM SECURITY)는<br>
-            보안에 대해 공부하고 싶은 학생들의 자발적인 스터디로부터 시작하여<br>
-            이화여자대학교 경력개발센터에 우수 동아리로 이름을 올렸으며,<br>
-            이화여자대학교 인재개발원 커리어클럽에 소속되어 <br>
+            E-COPS(EWHA-CONTROL OF PROGRAM SECURITY)는
+            보안에 대해 공부하고 싶은 학생들의 자발적인 스터디로부터 시작하여
+            이화여자대학교 경력개발센터에 우수 동아리로 이름을 올렸으며,
+            이화여자대학교 인재개발원 커리어클럽에 소속되어 
             활발한 활동을 펼쳐가고 있는 정보보안 동아리입니다.
           </p>
         </div> <!-- 소개-내용 -->
@@ -133,10 +134,7 @@
               <img class="main-icons__icon" src="images/session.png"/>
               <div class="main-icons__text d-flex flex-column align-items-center">
                 <span class="text-center fs-4">세션</span>
-                <p class="text-center p-3">매 학기 보안 공부 주제를 선정하여 
-                  주제에 대해 조별로 스터디를 진행한 후 매주 1회 
-                  정규 세션 발표를 통해 부원들과 지식을 나누는 시
-                  간을 가지고 있습니다.</p>
+                <p class="text-center p-3">매 학기 보안 공부 주제를 선정하여 조별로 스터디를 진행한 후 매주 1회 정규 세션 발표를 통해 부원들과 지식을 나누는 시간을 가지고 있습니다.</p>
               </div>
             </div>
             <!-- 스터디 -->
@@ -144,9 +142,7 @@
               <img class="main-icons__icon" src="images/study.png"/>
               <div class="main-icons__text d-flex flex-column align-items-center">
                 <span class="text-center fs-4">스터디</span>
-                <p class="text-center p-3">정규 세션 및 프로젝트를 원활하게 진행하기 위해 
-                  매학기, 방학 스터디를 통하여 보안 뿐만 아니라 컴퓨터 언어, 
-                  프레임워크, 툴 등의 개발 지식을 공부하고 있습니다. </p>
+                <p class="text-center p-3">정규 세션 및 프로젝트를 원활하게 진행하기 위해 매학기 방학 스터디를 통하여 보안 뿐만 아니라 컴퓨터 언어, 프레임워크, 툴 등의 개발 지식을 공부하고 있습니다. </p>
               </div>
             </div>
             <!-- 프로젝트 -->
@@ -154,9 +150,7 @@
               <img class="main-icons__icon" src="images/project.png"/>
               <div class="main-icons__text d-flex flex-column align-items-center">
                 <span class="text-center fs-4">프로젝트</span>
-                <p class="text-center p-3">스터디와 정규 세션에서 배운 내용을 바탕으로 팀을
-                  이루어 팀별 주제를 선정하여 매학기 마지막달부터 
-                  방학까지 개발과 보안 프로젝트를 진행하고 있습니다. </p>
+                <p class="text-center p-3">스터디와 정규 세션에서 배운 내용을 바탕으로 팀을 이루어 팀별 주제를 선정하여 매학기 마지막달부터 방학까지 개발과 보안 프로젝트를 진행하고 있습니다. </p>
               </div>
             </div>
           </div>
@@ -167,9 +161,7 @@
               <img class="main-icons__icon" src="images/contest.png"/>
               <div class="main-icons__text d-flex flex-column align-items-center">
                 <span class="text-center fs-4">대회</span>
-                <p class="text-center p-3">프로젝트와 스터디를 바탕으로 경험의 축적, 
-                  보안 분야 진출을 목표로 다양한 분야의 대회에 참여하며 지원
-                  을 아끼지 않고 있습니다.
+                <p class="text-center p-3">프로젝트와 스터디를 바탕으로 경험의 축적, 보안 분야 진출을 목표로 다양한 분야의 대회에 참여하며 지원을 아끼지 않고 있습니다.
               </p>
               </div>
             </div>
@@ -179,9 +171,7 @@
               <div class="main-icons__text d-flex flex-column align-items-center">
                 <span class="text-center fs-4">대외활동</span>
                 <!-- 글자 줄여서 사이즈 조절? -->
-                <p class="text-center p-3">전국대학연합 학술 세미나, 연합 세미나와 멘토링 워크숍
-                  등을 통해 보안 분야의 트렌드와 학술적 연구,
-                  전문가와 다른 보안인들과의 네트워크 형성을 하고 있습니다.
+                <p class="text-center p-3">전국대학연합 학술 세미나, 연합 세미나와 멘토링, 워크숍 등을 통해 보안 분야의 트렌드와 학술적 연구, 전문가와 다른 보안인들과의 네트워크 형성을 하고 있습니다.
               </p>
               </div>
             </div>
@@ -190,8 +180,7 @@
               <img class="main-icons__icon" src="images/etc.png"/>
               <div class="main-icons__text d-flex flex-column align-items-center">
                 <span class="text-center fs-4">친목</span>
-                <p class="text-center p-3">OB 모임, 홈커밍 데이, 뒷풀이, MT 등을 통해 부원들, 선 후배들간의 교류와 
-                  친목이 활발합니다! 하지만 강요는 없어요:)</p>
+                <p class="text-center p-3">OB 모임, 홈커밍 데이, 뒷풀이, MT 등을 통해 부원들, 선 후배들간의 교류와 친목이 활발합니다! 하지만 강요는 없어요:)</p>
               </div>
             </div>
           </div>
@@ -243,7 +232,7 @@
               </a>
             </li>
             <li class="nav-item mx-2">
-              <a class="nav-link text-light" href="#메일">
+              <a class="nav-link text-light" href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=ewha.ecops@gmail.com">
                 <i class="fas fa-paper-plane fs-4"></i>
               </a>
             </li>
@@ -251,6 +240,7 @@
           </ul> <!-- items -->
     </nav> <!-- ======== 하단 nav bar ======== -->
 
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
@@ -262,6 +252,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="#js"></script>
+    <script src="main js.js"></script>
   </body>
 </html>
