main scroll animation
애니메이션 코드 공유 (미완성)

--- a/client/main.html
+++ b/client/main.html
@@ -110,9 +110,9 @@
         <div class="main-item__content p-5 d-flex flex-column justify-content-center align-items-center">
           <!-- 동그라미-->
           <!-- 이미지 색감 조정! -->
-          <img class="main-circle" src="images/light-circle-text.png">
+          <img class="main-circle main-ani" src="images/light-circle-text.png">
           <!-- 텍스트 -->
-          <p class="main-text text-center">
+          <p class="main-text text-center main-ani">
             <!-- 모바일 줄바뀜 해결하기! -->
             E-COPS(EWHA-CONTROL OF PROGRAM SECURITY)는
             보안에 대해 공부하고 싶은 학생들의 자발적인 스터디로부터 시작하여
@@ -128,7 +128,7 @@
         <!-- 아이콘 6개 -->
         <div class="main-item__content main-icons container d-flex flex-column p-4 mt-5">
           <!-- 아이콘 1행 -->
-          <div class="main-icons__row row d-flex">
+          <div class="main-icons__row main-ani row d-flex">
             <!-- 세션 -->
             <div class="main-icons__col col-md-4 d-flex flex-column align-items-center my-5">
               <img class="main-icons__icon" src="images/session.png"/>
@@ -155,7 +155,7 @@
             </div>
           </div>
           <!-- 아이콘 2행 -->
-          <div class="main-icons__row row d-flex">
+          <div class="main-icons__row main-ani row d-flex">
             <!-- 대회 -->
             <div class="main-icons__col col-md-4 d-flex flex-column align-items-center my-5">
               <img class="main-icons__icon" src="images/contest.png"/>
@@ -188,13 +188,13 @@
       </div> <!-- 소개 -->
 
      <!-- 연혁 -->
-     <div class="main-item d-flex justify-content-center align-items-center">
+     <div class="main-item main-ani d-flex justify-content-center align-items-center">
       <img class="footstep-img" src="images/footstep-img.jpg" />
     </div>
     <!-- 연혁 -->
 
     <!-- 로드맵 -->
-    <div class="main-item d-flex justify-content-center align-items-center">
+    <div class="main-item main-ani d-flex justify-content-center align-items-center">
       <img class="roadmap-img" src="images/roadmap-img.jpg" />
     </div>
     <!-- 로드맵 -->
