Update dark mode banner animation&mobile

--- a/client/main-dark.html
+++ b/client/main-dark.html
@@ -118,18 +118,25 @@
       </div>
       <!-- 배너 텍스트 (오른쪽 박스) -->
       <div class="main-banner__text press-font">
-        <!-- 애니메이션 없는 글자 -->
-        <div class="main-banner__basic-text">
-          <h2 class="text-center text-light mb-4">catchphrase catchphrase</h2>
-          <h2 class="text-center text-light mb-5">catchphrase</h2>
+        <!-- 글자 -->
+        <div class="typing-txt text-start">
+          <ul>
+            <!-- 여기 캐치프레이즈 추가할 거면 하기 -->
+            <li>"Ewha Control Of Security"</li>
+            <li>&nbsp;E-COPS</li>
+          </ul>
         </div>
-        <!-- 애니메이션 있는 글자 -->
-        <div class="main-banner__ani-text">
-          <div class="type-ani">
-            <div class="typing">
-              <h2>EWhaControlOfSecurity</h2>
-            </div>
-          </div>
+        <!-- 커서 -->
+        <div class="typing text-start">
+          <ul>
+            <!-- 여기 캐치프레이즈 추가할 거면 하기 -->
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+        <div class="not-typing-txt d-flex flex-column align-items-center">
+          <h2>"Ewha Control Of Security"</h2>
+          <h2>E-COPS</h2>
         </div>
       </div>
     </header>
