Update catchphrase part

--- a/client/main-dark.html
+++ b/client/main-dark.html
@@ -121,7 +121,8 @@
         <!-- 글자 -->
         <div class="typing-txt text-start">
           <ul>
-            <!-- 여기 캐치프레이즈 추가할 거면 하기 -->
+            <!-- 여기 캐치프레이즈 추가 -->
+            <!-- <li>catchphrase catchphrase</li> -->
             <li>"Ewha Control Of Security"</li>
             <li>&nbsp;E-COPS</li>
           </ul>
@@ -129,12 +130,15 @@
         <!-- 커서 -->
         <div class="typing text-start">
           <ul>
-            <!-- 여기 캐치프레이즈 추가할 거면 하기 -->
+            <!-- 여기 캐치프레이즈 추가 -->
+            <!-- <li></li> -->
             <li></li>
             <li></li>
           </ul>
         </div>
         <div class="not-typing-txt d-flex flex-column align-items-center">
+          <!-- 여기 캐치프레이즈 추가 -->
+          <!-- <h2>catchphrase catchphrase</h2> -->
           <h2>"Ewha Control Of Security"</h2>
           <h2>E-COPS</h2>
         </div>
