--- a/client/main-dark.html
+++ b/client/main-dark.html
@@ -344,5 +344,6 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="#js"></script>
+    <script src = "main-dark js.js"></script>
   </body>
 </html>
