--- a/client/main.html
+++ b/client/main.html
@@ -263,5 +263,6 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="#js"></script>
+    <script src = "main js.js"></script>
   </body>
 </html>
