--- a/client/main-dark.html
+++ b/client/main-dark.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="kr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -17,14 +17,13 @@
 
     <!-- 카톡 공유 설정 -->
     <meta property="og:title" content="이화여자대학교 정보보안동아리 E-COPS" />
-    <!-- 이미지 절대 경로로 작성 -->
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image" content="#" />
+    <meta property="og:image" content="https://i.imgur.com/tk9GNph.png" />
     <!-- url 추가하기 -->
     <meta property="og:url" content="#" />
 
-    <!-- --기타-- -->
+    <!-- link -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -45,6 +44,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
+  <!-- main-dark 페이지 -->
   <body id="main-dark-page" class="dark-page main-page">
     <!-- ======== 상단 nav bar ======== -->
     <nav class="nav-top navbar navbar-expand-lg bg-black sticky-top py-3 px-2">
@@ -58,7 +58,6 @@
           <h1 class="ms-2 fs-5 py-2">E-COPS</h1>
         </a>
         <!-- 모바일 nav bar 버튼 -->
-        <!-- 모드 변경 버튼 빼기? -->
         <button
           class="navbar-toggler"
           type="button"
@@ -108,7 +107,7 @@
     </nav>
     <!-- ======== 상단 nav bar ======== -->
 
-    <!-- ======== dark 메인 배너 ======== -->
+    <!-- ======== 다크 메인 배너 ======== -->
     <header class="main-banner container-fluid p-0">
       <!-- 배너 배경 이미지 -->
       <img class="main-banner__img" src="images/dark-mode-bg.png" />
@@ -116,9 +115,9 @@
       <div class="main-banner__logo text-center">
         <img src="images/로고흰색.png" />
       </div>
-      <!-- 배너 텍스트 (오른쪽 박스) -->
+      <!-- 배너 텍스트 박스 -->
       <div class="main-banner__text press-font">
-        <!-- 글자 -->
+        <!-- 배너 글자 -->
         <div class="typing-txt text-start">
           <ul>
             <!-- 여기 캐치프레이즈 추가 -->
@@ -136,6 +135,7 @@
             <li></li>
           </ul>
         </div>
+        <!-- 모바일 배너 글자 -->
         <div class="not-typing-txt d-flex flex-column align-items-center">
           <!-- 여기 캐치프레이즈 추가 -->
           <!-- <h2>catchphrase catchphrase</h2> -->
@@ -143,24 +143,24 @@
           <h2>E-COPS</h2>
         </div>
       </div>
+      <!-- 배너 텍스트 박스 -->
     </header>
-    <!-- ======== dark 메인 배너 ======== -->
+    <!-- ======== 다크 메인 배너 ======== -->
 
     <!-- ========= main 본문 ========== -->
     <main
       class="main-screen d-flex flex-column align-items-center justify-content-center mt-5"
     >
-      <!-- 소개 -->
+      <!-- 1. 소개 -->
       <div class="main-item d-flex flex-column justify-content-center">
+        <!-- 소개-내용 -->
         <div
           class="main-item__content p-5 d-flex flex-column justify-content-center align-items-center"
         >
-          <!-- 동그라미-->
-          <!-- 이미지 색감 조정! -->
+          <!-- circle 이미지-->
           <img class="main-circle" src="images/dark-circle-text.png" />
           <!-- 텍스트 -->
           <p class="main-text line-height-2 text-center">
-            <!-- 모바일 줄바뀜 해결하기! -->
             E-COPS(EWHA-CONTROL OF PROGRAM SECURITY)는 보안에 대해 공부하고 싶은
             학생들의 자발적인 스터디로부터 시작하여 이화여자대학교
             경력개발센터에 우수 동아리로 이름을 올렸으며, 이화여자대학교
@@ -171,9 +171,7 @@
         <!-- 소개-내용 -->
 
         <!-- 소개-주요 활동 -->
-        <!-- 갖다 대면 커지게 애니메이션? -->
-        <!-- 아이콘 색상 통일성있게 변경 -->
-        <!-- 아이콘 6개 -->
+        <!-- 아이콘 -->
         <div
           class="main-item__content main-icons container d-flex flex-column p-4 mt-5"
         >
@@ -258,7 +256,6 @@
                 class="main-icons__text d-flex flex-column align-items-center"
               >
                 <span class="text-center fs-4">대외활동</span>
-                <!-- 글자 줄여서 사이즈 조절? -->
                 <p class="text-center p-3">
                   전국대학연합 학술 세미나, 연합 세미나와 멘토링, 워크숍 등을
                   통해 보안 분야의 트렌드와 학술적 연구, 전문가와 다른
@@ -285,25 +282,27 @@
         </div>
         <!-- 소개-주요 활동 -->
       </div>
-      <!-- 소개 -->
+      <!-- 1. 소개 -->
 
-      <!-- 연혁 -->
+      <!-- 2. 연혁 -->
       <div class="main-item d-flex justify-content-center align-items-center">
         <img class="footstep-img" src="images/footstep-dark-img.jpg" />
       </div>
-      <!-- 연혁 -->
+      <!-- 2. 연혁 -->
 
-      <!-- 로드맵 -->
+      <!-- 3. 로드맵 -->
       <div class="main-item d-flex justify-content-center align-items-center">
         <img class="roadmap-img" src="images/roadmap-dark-img.jpg" />
       </div>
-      <!-- 로드맵 -->
+      <!-- 3. 로드맵 -->
     </main>
     <!-- ========= main 본문 ========== -->
 
     <!-- ======== Contact 버튼 ======== -->
     <div class="contact-btn contact-btn-dark">
+      <!-- before -->
       <span class="contact-btn__text-before">Contact</span>
+      <!-- after -->
       <span class="contact-btn__text-after text-end">
         고민지 / 010-7186-4534 <br />
         mjk4534@ewhain.net
@@ -313,13 +312,12 @@
     <!-- ======== Contact 버튼 ======== -->
 
     <!-- ======== 하단 nav bar ======== -->
-    <!-- 배경 이미지 수정하기 -->
     <nav
       class="nav-bottom nav-bottom__dark navbar navbar-expand-lg sticky-bottom d-flex justify-content-center align-items-center"
     >
-      <!-- 모바일 추가 -->
       <!-- items -->
       <ul class="nav-list navbar-nav mb-2 mb-lg-0 d-flex align-items-center">
+        <!-- 인스타그램 -->
         <li class="nav-item mx-2">
           <a
             class="nav-link text-light"
@@ -328,16 +326,19 @@
             <i class="fab fa-instagram fs-2"></i>
           </a>
         </li>
+        <!-- 깃허브 -->
         <li class="nav-item mx-2">
           <a class="nav-link text-light" href="https://github.com/E-COPS">
             <i class="fab fa-github fs-2"></i>
           </a>
         </li>
+        <!-- 블로그 -->
         <li class="nav-item mx-1">
           <a class="nav-link" href="https://blog.naver.com/ecopsecops">
             <img src="images/blog.png" />
           </a>
         </li>
+        <!-- 메일 -->
         <li class="nav-item mx-2">
           <a
             class="nav-link text-light"
@@ -350,18 +351,14 @@
       <!-- items -->
     </nav>
     <!-- ======== 하단 nav bar ======== -->
+
+    <!-- script -->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
-      integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script src="main-dark js.js"></script>
+    <script src="js/main-dark js.js"></script>
   </body>
 </html>
