--- a/client/main.html
+++ b/client/main.html
@@ -13,15 +13,14 @@
 
     <!-- 카톡 공유 설정 -->
     <meta property="og:title" content="이화여자대학교 정보보안동아리 E-COPS">
-    <!-- 이미지 절대 경로로 작성 -->
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <meta property="og:image" content="#">
+    <meta property="og:image" content="https://i.imgur.com/tk9GNph.png">
     <!-- url 추가하기 -->
     <meta property="og:url" content="#">
     
 
-    <!-- --기타-- -->
+    <!-- link -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -47,15 +46,13 @@
 
     <!-- ======== 상단 nav bar ======== -->
     <nav class="nav-top navbar navbar-expand-lg bg-white sticky-top py-3 px-2 ">
-
       <!-- nav bar container -->
       <div class="nav-top__container container-fluid navbar-right m-0 ">
-        <!-- 이캅스 글자 main.html -> /-->
+        <!-- 이캅스 글자 -->
         <a class="nav-top__title navbar-brand align-middle text-reset" href="/">
           <h1 class="ms-2 fs-3">E-COPS</h1>
         </a>
         <!-- 모바일 nav bar 버튼 -->
-        <!-- 모드 변경 버튼 빼기? -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -89,7 +86,7 @@
 
     <!-- ======== 메인 배너 =========== -->
     <header class="main-banner d-flex align-items-center">
-      <!-- 배너 내용 -->
+      <!-- 배너 container -->
       <div class="main-banner__container container-fluid d-flex flex-column align-items-center">
         <!-- 배너 글씨 -->
         <h2 class="main-banner__text text-center text-light fs-4">이화여자대학교 정보보안 동아리</h2>
@@ -97,23 +94,22 @@
         <div class="main-banner__logo text-center m-1">
           <img src="images/로고흰색.png"/>
         </div>
-        <!-- 배너 로고 -->
+        <!-- 배너 글씨 -->
         <h1 class="main-banner__text text-center text-light fs-1">E-COPS</h2>
-      </div>
+      </div> <!-- 배너 container -->
     </header> <!-- ======== 메인 배너 =========== -->
 
     <!-- ========= main 본문 ========== -->
     <main class="main-screen d-flex flex-column align-items-center justify-content-center mt-5">
 
-      <!-- 소개 -->
+      <!-- 1. 소개 -->
       <div class="main-item d-flex flex-column justify-content-center">
+        <!-- 소개-내용 -->
         <div class="main-item__content p-5 d-flex flex-column justify-content-center align-items-center">
-          <!-- 동그라미-->
-          <!-- 이미지 색감 조정! -->
+          <!-- circle 이미지-->
           <img class="main-circle main-ani" src="images/light-circle-text.png">
           <!-- 텍스트 -->
           <p class="main-text text-center main-ani">
-            <!-- 모바일 줄바뀜 해결하기! -->
             E-COPS(EWHA-CONTROL OF PROGRAM SECURITY)는
             보안에 대해 공부하고 싶은 학생들의 자발적인 스터디로부터 시작하여
             이화여자대학교 경력개발센터에 우수 동아리로 이름을 올렸으며,
@@ -123,9 +119,7 @@
         </div> <!-- 소개-내용 -->
 
         <!-- 소개-주요 활동 -->
-        <!-- 갖다 대면 커지게 애니메이션? -->
-        <!-- 아이콘 색상 통일성있게 변경 -->
-        <!-- 아이콘 6개 -->
+        <!-- 아이콘 -->
         <div class="main-item__content main-icons container d-flex flex-column p-4 mt-5">
           <!-- 아이콘 1행 -->
           <div class="main-icons__row main-ani row d-flex">
@@ -170,7 +164,6 @@
               <img class="main-icons__icon" src="images/activity.png"/>
               <div class="main-icons__text d-flex flex-column align-items-center">
                 <span class="text-center fs-4">대외활동</span>
-                <!-- 글자 줄여서 사이즈 조절? -->
                 <p class="text-center p-3">전국대학연합 학술 세미나, 연합 세미나와 멘토링, 워크숍 등을 통해 보안 분야의 트렌드와 학술적 연구, 전문가와 다른 보안인들과의 네트워크 형성을 하고 있습니다.
               </p>
               </div>
@@ -185,26 +178,25 @@
             </div>
           </div>
         </div> <!-- 소개-주요 활동 -->
-      </div> <!-- 소개 -->
+      </div> <!-- 1. 소개 -->
 
-     <!-- 연혁 -->
-     <div class="main-item main-ani d-flex justify-content-center align-items-center">
-      <img class="footstep-img" src="images/footstep-img.jpg" />
-    </div>
-    <!-- 연혁 -->
+      <!-- 2. 연혁 -->
+      <div class="main-item main-ani d-flex justify-content-center align-items-center">
+        <img class="footstep-img" src="images/footstep-img.jpg" />
+      </div> <!-- 2. 연혁 -->
 
-    <!-- 로드맵 -->
-    <div class="main-item main-ani d-flex justify-content-center align-items-center">
-      <img class="roadmap-img" src="images/roadmap-img.jpg" />
-    </div>
-    <!-- 로드맵 -->
-
+      <!-- 3. 로드맵 -->
+      <div class="main-item main-ani d-flex justify-content-center align-items-center">
+        <img class="roadmap-img" src="images/roadmap-img.jpg" />
+      </div> <!-- 3. 로드맵 -->
     </main> <!-- ========= main 본문 ========== -->
 
 
     <!-- ======== Contact 버튼 ======== -->
     <div class="contact-btn">
+      <!-- before -->
       <span class="contact-btn__text-before">Contact</span>
+      <!-- after -->
       <span class="contact-btn__text-after text-end"> 고민지 / 010-7186-4534 <br>
         mjk4534@ewhain.net  </span>
       <i class="fas fa-comment contact-btn__icon text-light fs-3"></i>
@@ -213,45 +205,43 @@
     
     <!-- ======== 하단 nav bar ======== -->
     <nav class="nav-bottom navbar navbar-expand-lg sticky-bottom d-flex justify-content-center align-items-center">
-        <!-- 모바일 추가 -->
          <!-- items -->
           <ul class="nav-list navbar-nav mb-2 mb-lg-0 d-flex align-items-center">
+            <!-- 인스타그램 -->
             <li class="nav-item mx-2">
               <a class="nav-link text-light" href="https://www.instagram.com/ecops_ewha">
                 <i class="fab fa-instagram fs-2"></i>
               </a>
             </li>
+            <!-- 깃허브 -->
             <li class="nav-item mx-2">
               <a class="nav-link text-light " href="https://github.com/E-COPS">
                 <i class="fab fa-github fs-2"></i>
               </a>
             </li>
+            <!-- 블로그 -->
             <li class="nav-item mx-1">
               <a class="nav-link" href="https://blog.naver.com/ecopsecops">
                 <img src="images/blog.png" />
               </a>
             </li>
+            <!-- 메일 -->
             <li class="nav-item mx-2">
               <a class="nav-link text-light" href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=ewha.ecops@gmail.com">
                 <i class="fas fa-paper-plane fs-4"></i>
               </a>
             </li>
-
           </ul> <!-- items -->
     </nav> <!-- ======== 하단 nav bar ======== -->
 
+
+    <!-- script -->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
-      integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script src="main js.js"></script>
+    <script src="js/main js.js"></script>
   </body>
 </html>
