--- a/client/recruit.html
+++ b/client/recruit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="kr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -17,14 +17,13 @@
 
     <!-- 카톡 공유 설정 -->
     <meta property="og:title" content="이화여자대학교 정보보안동아리 E-COPS" />
-    <!-- 이미지 절대 경로로 작성 -->
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image" content="#" />
+    <meta property="og:image" content="https://i.imgur.com/tk9GNph.png" />
     <!-- url 추가하기 -->
     <meta property="og:url" content="#" />
 
-    <!-- --기타-- -->
+    <!-- link -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -45,12 +44,13 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
+  <!-- recruit 페이지 -->
   <body id="recruit-page">
     <!-- ======== 상단 nav bar ======== -->
     <nav class="nav-top navbar navbar-expand-lg bg-white sticky-top py-3 px-2">
       <!-- nav bar container -->
       <div class="nav-top__container container-fluid navbar-right m-0">
-        <!-- 이캅스 글자 -->
+        <!-- 이캅스 로고 -->
         <a class="nav-top__title navbar-brand align-middle text-reset" href="/">
           <img class="ms-2" src="images/로고그린.png" />
         </a>
@@ -104,6 +104,7 @@
     >
       <!-- 페이지 내부 박스 -->
       <div class="pdf-img d-flex justify-content-center align-items-center">
+        <!-- recruit 이미지 -->
         <img src="images/recruiting-img.jpg" />
       </div>
     </main>
@@ -113,9 +114,9 @@
     <nav
       class="nav-bottom navbar navbar-expand-lg sticky-bottom d-flex justify-content-center align-items-center"
     >
-      <!-- 모바일 추가 -->
       <!-- items -->
       <ul class="nav-list navbar-nav mb-2 mb-lg-0 d-flex align-items-center">
+        <!-- 인스타그램 -->
         <li class="nav-item mx-2">
           <a
             class="nav-link text-light"
@@ -124,16 +125,19 @@
             <i class="fab fa-instagram fs-2"></i>
           </a>
         </li>
+        <!-- 깃허브 -->
         <li class="nav-item mx-2">
           <a class="nav-link text-light" href="https://github.com/E-COPS">
             <i class="fab fa-github fs-2"></i>
           </a>
         </li>
+        <!-- 블로그 -->
         <li class="nav-item mx-1">
           <a class="nav-link" href="https://blog.naver.com/ecopsecops">
             <img src="images/blog.png" />
           </a>
         </li>
+        <!-- 메일 -->
         <li class="nav-item mx-2">
           <a
             class="nav-link text-light"
@@ -147,17 +151,11 @@
     </nav>
     <!-- ======== 하단 nav bar ======== -->
 
+    <!-- script -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
-      integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script src="#js"></script>
   </body>
 </html>
